welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:6: error: ';' expected but 'else' found.
    } else{
      ^